# NVT-solana-bootcamp-autumn

week-1/assignment/: .prettierrc  README.md  my-keypair.json  package-lock.json  package.json  tsconfig.json
week-1/assignment/lib/: helpers.ts
week-1/assignment/scripts/: 1.assignment.ts  generateKeypair.ts
week-2/assignment/: .prettierrc  README.md  package-lock.json  package.json
week-2/assignment/assets/: token.json
week-2/assignment/lib/: helpers.ts
week-2/assignment/metadata/: nft.json
week-2/assignment/scripts/: createNFTs.ts  createTokenWithMetadata.ts
week-2/code/: example.env
week-2/code/scripts/: 2.mintTokens.ts
week-3/assignment/: Anchor.toml
week-3/assignment/programs/todo-app/: Cargo.toml
week-3/assignment/programs/todo-app/src/: lib.rs
week-3/assignment/tests/: create-profile.ts  create-todo.ts  toggle-todo.ts
week-4/assignment/token-staking/: Anchor.toml
week-4/assignment/token-staking/programs/token-staking/: Cargo.toml
week-4/assignment/token-staking/programs/token-staking/src/: errors.rs  lib.rs
week-4/assignment/token-staking/programs/token-staking/src/instructions/: initialize.rs  stake.rs  unstake.rs
week-5/assignment/basic-amm/: .prettierrc  .rustfmt.toml  Anchor.toml  package-lock.json
week-5/assignment/basic-amm/programs/basic-amm/: Cargo.toml
week-5/assignment/basic-amm/programs/basic-amm/src/: lib.rs
week-5/assignment/basic-amm/programs/basic-amm/src/instructions/: remove_liquidity.rs
week-6/assignment/backend/: package-lock.json  package.json  server.js
week-6/code/: .env  package-lock.json
(+11 files in other folders)
