[package]
description = "Created with Anchor"
edition = "2021"
name = "todo-app"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "todo_app"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.31.1"
