[package]
description = "Created with Anchor"
edition = "2021"
name = "token-staking"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_staking"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"
