[package]
description = "Created with Anchor"
edition = "2021"
name = "basic-amm"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "basic_amm"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = {version = "0.31.1"}
mpl-token-metadata = "5.1.0"
spl-math = {version = "0.3.0", features = ["no-entrypoint"]}
